@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.75 2001-05-22 13:35:26 rufustfirefly Exp $
+dnl $Id: configure.in,v 1.76 2001-05-22 19:13:36 rufustfirefly Exp $
 dnl configure.in for netatalk
 
 AC_INIT(bin/adv1tov2/adv1tov2.c)
@@ -85,7 +85,7 @@ dnl Checks for header files.
 AC_HEADER_DIRENT
 AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
-AC_CHECK_HEADERS(fcntl.h limits.h stdint.h strings.h sys/fcntl.h sys/file.h sys/ioctl.h sys/time.h sys/mnttab.h sys/statvfs.h sys/vfs.h mntent.h syslog.h unistd.h termios.h sys/termios.h netdb.h sgtty.h ufs/quota.h mount.h statfs.h)
+AC_CHECK_HEADERS(fcntl.h limits.h stdint.h strings.h sys/fcntl.h sys/file.h sys/ioctl.h sys/time.h sys/mnttab.h sys/statvfs.h sys/vfs.h mntent.h syslog.h unistd.h termios.h sys/termios.h netdb.h sgtty.h ufs/quota.h mount.h sys/mount.h statfs.h)
 AC_CHECK_HEADER(sys/cdefs.h,,
 	AC_MSG_RESULT([enabling generic cdefs.h from tree])
 	CFLAGS="-I\$(top_srcdir)/sys/generic $CFLAGS"
@@ -533,6 +533,7 @@ if test x"$this_os" = "xtru64"; then
 	AC_DEFINE(USE_OLD_RQUOTA)
 	dnl AC_DEFINE(USE_UFS_QUOTA_H)
 	AC_DEFINE(TRU64)
+	AC_CHECK_LIB(security,set_auth_parameters)
 	CFLAGS="-I\$(top_srcdir)/sys/tru64 $CFLAGS"
 	LDSHAREDFLAGS="-shared -expect_unresolved \*"
 	need_dash_r=no
